fix: overflowing container

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*==================
     font imports
 ==================*/
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Lexend+Deca:wght@200;300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Lexend+Deca:wght@200;300;400;700&display=swap');
 
 /*===================
     global-layout
@@ -29,7 +29,8 @@ body {
 ================*/
 .card__img-container {
   position: relative;
-  height: fit-content;
+  max-width: 100%;
+  min-height: auto;
   font-size: 0;
 }
 
@@ -42,7 +43,7 @@ body {
 
 .card__img {
   max-width: 100%;
-  height: 100%;
+  min-height: 100%;
   border-radius: 10px 10px 0 0;
 }
 
@@ -140,6 +141,7 @@ body {
 
   .card__img-desktop {
     display: unset;
+    width: 100%;
   }
 
   .card__img,
@@ -158,8 +160,9 @@ body {
 
   .card__heading {
     text-align: left;
-    max-width: 90%;
-    font-size: 2.3vw;
+    max-width: 85%;
+    font-size: 2.45vw;
+    font-weight: 500;
     margin-top: 0.3em;
     margin-bottom: 0.4em;
   }
@@ -167,7 +170,8 @@ body {
   .card__description {
     text-align: left;
     max-width: 80%;
-    font-size: 1.1vw;
+    font-size: 1vw;
+    font-weight: 300;
   }
 
   .card__stats {
@@ -186,6 +190,6 @@ body {
   }
 
   .card__stats-item--middle {
-    margin: auto 3.5em;
+    margin: auto 4.4vw;
   }
 }
